fix: fix map height on mobile ver and made minor changes

--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -9,7 +9,10 @@
   min-height: 40px;
 }
 #map {
-  height: 300px;
+  height: 700px;
+}
+#content{
+  height: calc(100vh - 104px);
 }
 #spinner {
   width: 100px;
@@ -26,9 +29,7 @@ article > div > h6 {
   font-size: 80px;
 }
 @media screen and (min-width: 992px) {
-  #map {
-    height: 700px;
-  }
+
   #spinner {
   width: 200px;
   height: 200px;
